chore: eslint and prettier small adjustments

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
   "plugins": [
     "@typescript-eslint",
     "react",
+    "prettier",
     "import-helpers"
   ],
   "ignorePatterns": ["*.js", ".contentlayer", ".next", "node_modules"],
