--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint:fix": "eslint src --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.0-rc14",
     "next": "13.5.6",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
