--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint src --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "classnames": "^2.3.2",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
