--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "embla-carousel-react": "^8.0.0-rc14",
     "next": "13.5.6",
     "next-contentlayer": "^0.3.4",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
