chore: next upgrade to 14.0.3

--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3",
     "typescript": "^5"
+  },
+  "overrides": {
+    "next-contentlayer": {
+      "next": "$next"
+    }
   }
 }
